trab5/y.output
Terminals unused in grammar

    OBJECT
    AND
    OR
    ME_IG
    MA_IG
    DIF


State 21 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMDs CMD
    3     | ε

    4 CMD: CMD_FUNCTION
    5    | CMD_LET ';'
    6    | CMD_VAR ';'
    7    | CMD_CONST ';'
    8    | CMD_IF
    9    | CMD_FOR
   10    | CMD_WHILE
   11    | RETURN E ';'
   12    | E ';'
   13    | '{' EMPILHA_TS CMDs '}'
   14    | E ASM ';'
   15    | ';'

   16 EMPILHA_TS: ε

   17 LISTA_ARGs: ARGs
   18           | ε

   19 ARGs: ARGs ',' E
   20     | E

   21 $@1: ε

   22 CMD_FUNCTION: FUNCTION ID $@1 '(' EMPILHA_TS LISTA_PARAMs ')' '{' CMDs '}'

   23 LISTA_PARAMs: PARAMs
   24             | ε

   25 PARAMs: PARAMs ',' PARAM
   26       | PARAM

   27 PARAM: ID
   28      | ID '=' E

   29 CMD_FOR: FOR '(' PRIM_E ';' E ';' E ')' CMD

   30 CMD_WHILE: WHILE '(' E ')' CMD

   31 PRIM_E: CMD_LET
   32       | CMD_VAR
   33       | CMD_CONST
   34       | E

   35 CMD_LET: LET LET_VARs

   36 LET_VARs: LET_VAR ',' LET_VARs
   37         | LET_VAR

   38 LET_VAR: ID
   39        | ID '=' E

   40 CMD_VAR: VAR VAR_VARs

   41 VAR_VARs: VAR_VAR ',' VAR_VARs
   42         | VAR_VAR

   43 VAR_VAR: ID
   44        | ID '=' E

   45 CMD_CONST: CONST CONST_VARs

   46 CONST_VARs: CONST_VAR ',' CONST_VARs
   47           | CONST_VAR

   48 CONST_VAR: ID '=' E

   49 CMD_IF: IF '(' E ')' CMD ELSE CMD
   50       | IF '(' E ')' CMD

   51 LVALUEPROP: E '[' E ']'
   52           | E '.' ID

   53 E: ID '=' E
   54  | LVALUEPROP '=' E
   55  | ID MAIS_IGUAL E
   56  | LVALUEPROP MAIS_IGUAL E
   57  | E '<' E
   58  | E '>' E
   59  | E '+' E
   60  | E '-' E
   61  | E '*' E
   62  | E '/' E
   63  | E '%' E
   64  | E IGUAL E
   65  | E MAIS_MAIS
   66  | '-' E
   67  | E '(' LISTA_ARGs ')'
   68  | CDOUBLE
   69  | CINT
   70  | BOOLEAN
   71  | '{' '}'
   72  | CSTRING
   73  | ID
   74  | LVALUEPROP
   75  | '(' E ')'
   76  | '[' ']'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 63
    '(' (40) 22 29 30 49 50 67 75
    ')' (41) 22 29 30 49 50 67 75
    '*' (42) 61
    '+' (43) 59
    ',' (44) 19 25 36 41 46
    '-' (45) 60 66
    '.' (46) 52
    '/' (47) 62
    ';' (59) 5 6 7 11 12 14 15 29
    '<' (60) 57
    '=' (61) 28 39 44 48 53 54
    '>' (62) 58
    '[' (91) 51 76
    ']' (93) 51 76
    '{' (123) 13 22 71
    '}' (125) 13 22 71
    error (256)
    ID (258) 22 27 28 38 39 43 44 48 52 53 55 73
    IF (259) 49 50
    ELSE (260) 49
    LET (261) 35
    CONST (262) 45
    VAR (263) 40
    FOR (264) 29
    FUNCTION (265) 22
    WHILE (266) 30
    ASM (267) 14
    RETURN (268) 11
    BOOLEAN (269) 70
    OBJECT (270)
    CDOUBLE (271) 68
    CSTRING (272) 72
    CINT (273) 69
    AND (274)
    OR (275)
    ME_IG (276)
    MA_IG (277)
    DIF (278)
    IGUAL (279) 64
    MAIS_IGUAL (280) 55 56
    MAIS_MAIS (281) 65


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    S (45)
        on left: 1
        on right: 0
    CMDs (46)
        on left: 2 3
        on right: 1 2 13 22
    CMD (47)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 2 29 30 49 50
    EMPILHA_TS (48)
        on left: 16
        on right: 13 22
    LISTA_ARGs (49)
        on left: 17 18
        on right: 67
    ARGs (50)
        on left: 19 20
        on right: 17 19
    CMD_FUNCTION (51)
        on left: 22
        on right: 4
    $@1 (52)
        on left: 21
        on right: 22
    LISTA_PARAMs (53)
        on left: 23 24
        on right: 22
    PARAMs (54)
        on left: 25 26
        on right: 23 25
    PARAM (55)
        on left: 27 28
        on right: 25 26
    CMD_FOR (56)
        on left: 29
        on right: 9
    CMD_WHILE (57)
        on left: 30
        on right: 10
    PRIM_E (58)
        on left: 31 32 33 34
        on right: 29
    CMD_LET (59)
        on left: 35
        on right: 5 31
    LET_VARs (60)
        on left: 36 37
        on right: 35 36
    LET_VAR (61)
        on left: 38 39
        on right: 36 37
    CMD_VAR (62)
        on left: 40
        on right: 6 32
    VAR_VARs (63)
        on left: 41 42
        on right: 40 41
    VAR_VAR (64)
        on left: 43 44
        on right: 41 42
    CMD_CONST (65)
        on left: 45
        on right: 7 33
    CONST_VARs (66)
        on left: 46 47
        on right: 45 46
    CONST_VAR (67)
        on left: 48
        on right: 46 47
    CMD_IF (68)
        on left: 49 50
        on right: 8
    LVALUEPROP (69)
        on left: 51 52
        on right: 54 56 74
    E (70)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 11 12 14 19 20 28 29 30 34 39 44 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 75


State 0

    0 $accept: • S $end

    $default  reduce using rule 3 (CMDs)

    S     go to state 1
    CMDs  go to state 2


State 1

    0 $accept: S • $end

    $end  shift, and go to state 3


State 2

    1 S: CMDs •
    2 CMDs: CMDs • CMD

    ID        shift, and go to state 4
    IF        shift, and go to state 5
    LET       shift, and go to state 6
    CONST     shift, and go to state 7
    VAR       shift, and go to state 8
    FOR       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    WHILE     shift, and go to state 11
    RETURN    shift, and go to state 12
    BOOLEAN   shift, and go to state 13
    CDOUBLE   shift, and go to state 14
    CSTRING   shift, and go to state 15
    CINT      shift, and go to state 16
    '-'       shift, and go to state 17
    '['       shift, and go to state 18
    '('       shift, and go to state 19
    ';'       shift, and go to state 20
    '{'       shift, and go to state 21

    $default  reduce using rule 1 (S)

    CMD           go to state 22
    CMD_FUNCTION  go to state 23
    CMD_FOR       go to state 24
    CMD_WHILE     go to state 25
    CMD_LET       go to state 26
    CMD_VAR       go to state 27
    CMD_CONST     go to state 28
    CMD_IF        go to state 29
    LVALUEPROP    go to state 30
    E             go to state 31


State 3

    0 $accept: S $end •

    $default  accept


State 4

   53 E: ID • '=' E
   55  | ID • MAIS_IGUAL E
   73  | ID •

    MAIS_IGUAL  shift, and go to state 32
    '='         shift, and go to state 33

    $default  reduce using rule 73 (E)


State 5

   49 CMD_IF: IF • '(' E ')' CMD ELSE CMD
   50       | IF • '(' E ')' CMD

    '('  shift, and go to state 34


State 6

   35 CMD_LET: LET • LET_VARs

    ID  shift, and go to state 35

    LET_VARs  go to state 36
    LET_VAR   go to state 37


State 7

   45 CMD_CONST: CONST • CONST_VARs

    ID  shift, and go to state 38

    CONST_VARs  go to state 39
    CONST_VAR   go to state 40


State 8

   40 CMD_VAR: VAR • VAR_VARs

    ID  shift, and go to state 41

    VAR_VARs  go to state 42
    VAR_VAR   go to state 43


State 9

   29 CMD_FOR: FOR • '(' PRIM_E ';' E ';' E ')' CMD

    '('  shift, and go to state 44


State 10

   22 CMD_FUNCTION: FUNCTION • ID $@1 '(' EMPILHA_TS LISTA_PARAMs ')' '{' CMDs '}'

    ID  shift, and go to state 45


State 11

   30 CMD_WHILE: WHILE • '(' E ')' CMD

    '('  shift, and go to state 46


State 12

   11 CMD: RETURN • E ';'

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 48


State 13

   70 E: BOOLEAN •

    $default  reduce using rule 70 (E)


State 14

   68 E: CDOUBLE •

    $default  reduce using rule 68 (E)


State 15

   72 E: CSTRING •

    $default  reduce using rule 72 (E)


State 16

   69 E: CINT •

    $default  reduce using rule 69 (E)


State 17

   66 E: '-' • E

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 49


State 18

   76 E: '[' • ']'

    ']'  shift, and go to state 50


State 19

   75 E: '(' • E ')'

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 51


State 20

   15 CMD: ';' •

    $default  reduce using rule 15 (CMD)


State 21

   13 CMD: '{' • EMPILHA_TS CMDs '}'
   71 E: '{' • '}'

    '}'  shift, and go to state 52

    '}'       [reduce using rule 16 (EMPILHA_TS)]
    $default  reduce using rule 16 (EMPILHA_TS)

    EMPILHA_TS  go to state 53


State 22

    2 CMDs: CMDs CMD •

    $default  reduce using rule 2 (CMDs)


State 23

    4 CMD: CMD_FUNCTION •

    $default  reduce using rule 4 (CMD)


State 24

    9 CMD: CMD_FOR •

    $default  reduce using rule 9 (CMD)


State 25

   10 CMD: CMD_WHILE •

    $default  reduce using rule 10 (CMD)


State 26

    5 CMD: CMD_LET • ';'

    ';'  shift, and go to state 54


State 27

    6 CMD: CMD_VAR • ';'

    ';'  shift, and go to state 55


State 28

    7 CMD: CMD_CONST • ';'

    ';'  shift, and go to state 56


State 29

    8 CMD: CMD_IF •

    $default  reduce using rule 8 (CMD)


State 30

   54 E: LVALUEPROP • '=' E
   56  | LVALUEPROP • MAIS_IGUAL E
   74  | LVALUEPROP •

    MAIS_IGUAL  shift, and go to state 57
    '='         shift, and go to state 58

    $default  reduce using rule 74 (E)


State 31

   12 CMD: E • ';'
   14    | E • ASM ';'
   51 LVALUEPROP: E • '[' E ']'
   52           | E • '.' ID
   57 E: E • '<' E
   58  | E • '>' E
   59  | E • '+' E
   60  | E • '-' E
   61  | E • '*' E
   62  | E • '/' E
   63  | E • '%' E
   64  | E • IGUAL E
   65  | E • MAIS_MAIS
   67  | E • '(' LISTA_ARGs ')'

    ASM        shift, and go to state 59
    IGUAL      shift, and go to state 60
    '<'        shift, and go to state 61
    '>'        shift, and go to state 62
    '+'        shift, and go to state 63
    '-'        shift, and go to state 64
    '*'        shift, and go to state 65
    '/'        shift, and go to state 66
    '%'        shift, and go to state 67
    MAIS_MAIS  shift, and go to state 68
    '['        shift, and go to state 69
    '('        shift, and go to state 70
    '.'        shift, and go to state 71
    ';'        shift, and go to state 72


State 32

   55 E: ID MAIS_IGUAL • E

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 73


State 33

   53 E: ID '=' • E

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 74


State 34

   49 CMD_IF: IF '(' • E ')' CMD ELSE CMD
   50       | IF '(' • E ')' CMD

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 75


State 35

   38 LET_VAR: ID •
   39        | ID • '=' E

    '='  shift, and go to state 76

    $default  reduce using rule 38 (LET_VAR)


State 36

   35 CMD_LET: LET LET_VARs •

    $default  reduce using rule 35 (CMD_LET)


State 37

   36 LET_VARs: LET_VAR • ',' LET_VARs
   37         | LET_VAR •

    ','  shift, and go to state 77

    $default  reduce using rule 37 (LET_VARs)


State 38

   48 CONST_VAR: ID • '=' E

    '='  shift, and go to state 78


State 39

   45 CMD_CONST: CONST CONST_VARs •

    $default  reduce using rule 45 (CMD_CONST)


State 40

   46 CONST_VARs: CONST_VAR • ',' CONST_VARs
   47           | CONST_VAR •

    ','  shift, and go to state 79

    $default  reduce using rule 47 (CONST_VARs)


State 41

   43 VAR_VAR: ID •
   44        | ID • '=' E

    '='  shift, and go to state 80

    $default  reduce using rule 43 (VAR_VAR)


State 42

   40 CMD_VAR: VAR VAR_VARs •

    $default  reduce using rule 40 (CMD_VAR)


State 43

   41 VAR_VARs: VAR_VAR • ',' VAR_VARs
   42         | VAR_VAR •

    ','  shift, and go to state 81

    $default  reduce using rule 42 (VAR_VARs)


State 44

   29 CMD_FOR: FOR '(' • PRIM_E ';' E ';' E ')' CMD

    ID       shift, and go to state 4
    LET      shift, and go to state 6
    CONST    shift, and go to state 7
    VAR      shift, and go to state 8
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    PRIM_E      go to state 82
    CMD_LET     go to state 83
    CMD_VAR     go to state 84
    CMD_CONST   go to state 85
    LVALUEPROP  go to state 30
    E           go to state 86


State 45

   22 CMD_FUNCTION: FUNCTION ID • $@1 '(' EMPILHA_TS LISTA_PARAMs ')' '{' CMDs '}'

    $default  reduce using rule 21 ($@1)

    $@1  go to state 87


State 46

   30 CMD_WHILE: WHILE '(' • E ')' CMD

    ID       shift, and go to state 4
    BOOLEAN  shift, and go to state 13
    CDOUBLE  shift, and go to state 14
    CSTRING  shift, and go to state 15
    CINT     shift, and go to state 16
    '-'      shift, and go to state 17
    '['      shift, and go to state 18
    '('      shift, and go to state 19
    '{'      shift, and go to state 47

    LVALUEPROP  go to state 30
    E           go to state 88


State 47

   71 E: '{' • '}'

    '}'  shift, and go to state 52


State 48

   11 CMD: RETURN E • ';'
   51 LVALUEPROP: E • '[' E ']'
   52           | E • '.' ID
   57 E: E • '<' E
   58  | E • '>' E
   59  | E • '+' E
   60  | E • '-' E
   61  | E • '*' E
   62  | E • '/' E
   63  | E • '%' E
   64  | E • IGUAL E
   65  | E • MAIS_MAIS
   67  | E • '(' LISTA_ARGs ')'

    IGUAL      shift, and go to state 60
    '<'        shift, and go to state 61
    '>'        shift, and go to state 62
    '+'        shift, and go to state 63
    '-'        shift, and go to state 64
    '*'        shift, and go to state 65
    '/'        shift, and go to state 66
    '%'        shift, and go to state 67
    MAIS_MAIS  shift, and go to state 68
    '['        shift, and go to state 69
    '('        shift, and go to state 70
    '.'        shift, and go to state 71
    ';'        shift, and go to state 89


State 49

   51 LVALUEPROP: E • '[' E ']'
   52           | E • '.' ID
   57 E: E • '<' E
   58  | E • '>' E
   59  | E • '+' E
   60  | E • '-' E
   61  | E • '*' E
   62  | E • '/' E
   63  | E • '%' E
   64  | E • IGUAL E
   65  | E • MAIS_MAIS
   66  | '-' E •
   67  | E • '(' LISTA_ARGs ')'

    '*'        shift, and go to state 65
    '/'        shift, and go to state 66
    '%'        shift, and go to state 67
    MAIS_MAIS  shift, and go to state 68
    '['        shift, and go to state 69
    '('        shift, and go to state 70
    '.'        shift, and go to state 71

    $default  reduce using rule 66 (E)


State 50

   76 E: '[' ']' •

    $default  reduce using rule 76 (E)


State 51

   51 LVALUEPROP: E • '[' E ']'
   52           | E • '.' ID
   57 E: E • '<' E
   58  | E • '>' E
   59  | E • '+' E
   60  | E • '-' E
   61  | E • '*' E
   62  | E • '/' E
   63  | E • '%' E
   64  | E • IGUAL E
   65  | E • MAIS_MAIS
   67  | E • '(' LISTA_ARGs ')'
   75  | '(' E • ')'
